--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
 *.heic filter=lfs diff=lfs merge=lfs -text
 *.HEIC filter=lfs diff=lfs merge=lfs -text
