Add new bulk back images and UI improvements
Card Images (LFS):
- Add 42 PNG format bulk back images (IMG_8074-8129)
- Add pending verification files for IMG_2212 (9 cropped backs + JSON)
- Move IMG_2212.HEIC to pending verification

Backend & Processing:
- Remove auto_retrain.py and condition_model_trainer.py (deprecated)
- Add config.py for centralized configuration
- Update grid_processor.py improvements
- Fix bulk_back_analysis.py EXIF orientation handling to prevent unwanted rotation
- Remove obsolete database migration scripts

UI Components:
- Add ConfirmDialog component for user confirmations
- Update MainPage, DatabaseBrowser, RawScanPreview styling
- Add authentication middleware and routes
- Package dependency updates

Database & Logs:
- Update trading_cards.db with new entries
- Add processing logs from 2025-12-17
- Update processing progress and status tracking

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,15 @@
 app/__pycache__/
 app/cache/
 
+# backup files
+*.backup
+*.bak
+
 # local setup
 .env
+.env.production
+.env.development
+.env.test
 .claude
 .ruff_cache
 .vscode
