Improve extraction accuracy and add correction learning system
GPT Vision Improvements:
- Increase max image resolution from 2400px to 4000px for better clarity
- Add structured JSON schema with strict mode to enforce exact field types
- Update prompt to request lowercase names and city+team format
- Simplify team field description to "Team name (including city)"
- Remove unnecessary prompt details (# symbol mention, copyright parentheses)

Correction Learning System:
- Add CorrectionTracker class to log manual corrections during verification
- Track corrections by field (name, team, brand, etc.) with context (sport, brand, year)
- Auto-apply learned corrections to future extractions based on patterns
- Integrate with grid_processor to apply corrections after GPT extraction
- Update server.js to log corrections when users pass cards with edits
- Store corrections in corrections.db (excluded from git)

New Card Images (LFS):
- Add 6 PNG format bulk back images (IMG_8133-8138)

Cleanup:
- Remove cached Python bytecode file
- Update .gitignore to exclude __pycache__ and corrections.db
- Fix bulk_back_analysis.py EXIF rotation handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # caches
 app/__pycache__/
+app/scripts/__pycache__/
 app/cache/
+
+# learning databases
+cards/verified/corrections.db
 
 # backup files
 *.backup
